--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "scripts": {
         "run": "node index.js",
-        "test": "jest --watch"
+        "test": "jest",
+        "precoverage": "rm -rf ./coverage",
+        "coverage": "jest --coverage",
+        "test-watch": "jest --watch"
     },
     "author": "",
     "license": "ISC",
