--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
         "co": "^4.6.0",
         "dotenv": "^4.0.0",
         "github": "^8.1.1",
-        "markdown": "^0.5.0",
+        "html-minifier": "^3.4.3",
+        "jekyll-markdown-parser": "^1.0.0",
         "moment": "^2.17.1",
-        "recursive-readdir": "^2.1.0",
-        "yamlhead": "^0.2.0"
+        "recursive-readdir": "^2.1.0"
     },
     "jest": {
         "testEnvironment": "node"
