--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: node_js
 node_js: 6
 sudo: required
 dist: trusty
-
+addons:
+  code_climate:
+    repo_token: "4e06b927177b0c1b5b3c9ad847a177a2aee50bfee8d18acdcd07302b2a466be3"
 before_script:
 - npm install -g yarn
 - yarn
